[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackroad"
version = "0.1.0"
description = "BlackRoad OS Python SDK — fleet management, AI inference, and communications"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [{name = "BlackRoad OS, Inc.", email = "alexa@blackroad.io"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://blackroad.io"
Repository = "https://github.com/blackboxprogramming/blackroad-api-sdks"
Documentation = "https://docs.blackroad.io"
